# hello_stoic

./: Cargo.toml  Dockerfile  README.md
openshift/: configmap.yaml  deployment.yaml  hello_stoic.yaml  persistentvolume.yaml  persistentvolumeclaim.yaml  secret.yaml  service.yaml
src/: main.rs  texts.rs
static/: 404.html  enchiridion.txt
